objects/Ambiente__c.object
<CustomObject>
    <label>Ambiente</label>
    <nameField>
        <label>Nome do ambiente</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ambientes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>UBS__c</fullName>
        <label>UBS</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ambientes</relationshipLabel>
        <relationshipName>Ambientes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Almoxarifado</fullName>
                </value>
                <value>
                    <fullName>Área Descoberta / Playground</fullName>
                </value>
                <value>
                    <fullName>BWC</fullName>
                </value>
                <value>
                    <fullName>Circulação</fullName>
                </value>
                <value>
                    <fullName>Cisterna</fullName>
                </value>
                <value>
                    <fullName>Consultório</fullName>
                </value>
                <value>
                    <fullName>Consultório Odontológico</fullName>
                </value>
                <value>
                    <fullName>Copa</fullName>
                </value>
                <value>
                    <fullName>Depósito de Materiais de Limpeza</fullName>
                </value>
                <value>
                    <fullName>Depósito de Resíduos</fullName>
                </value>
                <value>
                    <fullName>Embarque e Desembarque de Ambulância</fullName>
                </value>
                <value>
                    <fullName>Estacionamento</fullName>
                </value>
                <value>
                    <fullName>Estocagem/Dipensação de Medicamentos</fullName>
                </value>
                <value>
                    <fullName>Expurgo</fullName>
                </value>
                <value>
                    <fullName>Jardim</fullName>
                </value>
                <value>
                    <fullName>Outros (descrever)</fullName>
                </value>
                <value>
                    <fullName>Sala de Administração&quot;,</fullName>
                </value>
                <value>
                    <fullName>Sala de Atividades Coletivas</fullName>
                </value>
                <value>
                    <fullName>Sala de Coleta</fullName>
                </value>
                <value>
                    <fullName>Sala de Curativos</fullName>
                </value>
                <value>
                    <fullName>Sala de Esterelização</fullName>
                </value>
                <value>
                    <fullName>Sala de Inalação</fullName>
                </value>
                <value>
                    <fullName>Sala de Observação / Procedimentos</fullName>
                </value>
                <value>
                    <fullName>Sala de Recepção/Espera</fullName>
                </value>
                <value>
                    <fullName>Sala de Vacinas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grupo__c</fullName>
        <label>Grupo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contato</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ambientes</relationshipLabel>
        <relationshipName>Ambientes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unidade__c</fullName>
        <label>Unidade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobertura__c</fullName>
        <label>Cobertura</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coberto</fullName>
                </value>
                <value>
                    <fullName>Descoberto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusivo__c</fullName>
        <label>Exclusivo</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PeDireito__c</fullName>
        <label>Pé direito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comprimento__c</fullName>
        <label>Comprimento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AreaAmbiente__c</fullName>
        <label>Área do ambiente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AreaEsquadrias__c</fullName>
        <label>Área de esquadrias</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LarguraDimensao__c</fullName>
        <label>Largura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantidadeResposta__c</fullName>
        <label>Quantidade de Resposta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantidadeRespostasFinalizadas__c</fullName>
        <label>Quantidade de Respostas finalizadas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantidadeRespostasNaofinalizadas__c</fullName>
        <formula>QuantidadeResposta__c - QuantidadeRespostasFinalizadas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantidade Respostas não finalizadas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
</CustomObject>